// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`query() calls onAccessTokenExpired() if provided and access token is invalid 1`] = `
Object {
  "error": "access_token_invalid",
}
`;

exports[`query() returns correct response for GET request to a valid uri 1`] = `
Object {
  "access_token": "valid_access_token",
  "headers": Object {
    "Authorization": "Bearer valid_access_token",
  },
  "title": "sample mocked data for GET request to https://us.api.blizzard.com/sc2/sample/endpoint",
}
`;

exports[`query() returns error if validateAccessTokenOnEachQuery is set to false and access token is invalid 1`] = `
Object {
  "error": "access_token_invalid",
}
`;

exports[`query() returns error if validateAccessTokenOnEachQuery is set to true and access token is invalid 1`] = `
Object {
  "error": "access_token_invalid",
}
`;

exports[`query() validates access token if validateAccessTokenOnEachQuery is set to true 1`] = `
Object {
  "access_token": "valid_access_token",
  "headers": Object {
    "Authorization": "Bearer valid_access_token",
  },
  "title": "sample mocked data for GET request to https://us.api.blizzard.com/valid/endpoint",
}
`;
